owncloud-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: owncloud
    app.kubernetes.io/part-of: owncloud
  name: owncloud
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: owncloud
      app.kubernetes.io/part-of: owncloud
  template:
    metadata:
      name: owncloud
      labels:
        app.kubernetes.io/name: owncloud
        app.kubernetes.io/part-of: owncloud
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - owncloud
                - key: app.kubernetes.io/part-of
                  operator: In
                  values:
                  - owncloud
      volumes:
      - name: owncloud-data
        flexVolume:
          driver: rook.io/rook
          fsType: ceph
          options:
            fsName: repl-2-1
            clusterNamespace: rook-ceph
            path: "/atrost-live-proj-media/owncloud"
      containers:
      - image: owncloud/server:10.1.1-20190406
        imagePullPolicy: IfNotPresent
        name: owncloud
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: owncloud-data
          mountPath: /mnt/data
        readinessProbe:
          initialDelaySeconds: 5
          failureThreshold: 20
          timeoutSeconds: 5
          exec:
            command:
            - /usr/bin/healthcheck
        livenessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 30
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 15
