owncloud-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: owncloud
    app.kubernetes.io/part-of: owncloud
  name: owncloud
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: owncloud
    app.kubernetes.io/part-of: owncloud
  type: ClusterIP
